# ConvienceStore

./: .gitignore  README.md  pyproject.toml  requirements.txt
R/: draw_map.R  read_data.R
conviencestore/: FamilyMart.py  HiLife.py  OkMart.py  SevenEleven.py  utils.py
data/: domain_winner.csv  familymart.json  hilife.json  okmart.json  seveneleven.json
