[tool.poetry]
name = "conviencestore"
version = "0.1.0"
description = ""
authors = ["Kevin in Laptop Windows <kevin820606@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
xmltodict = "^0.13.0"
beautifulsoup4 = "^4.11.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
